[added] notification user preferences. [fixed] squished title in header if small screen.

--- a/src/client/header/header-styles.module.scss
+++ b/src/client/header/header-styles.module.scss
@@ -40,6 +40,10 @@ $menu-side-padding: 20px;
                     circle at center,
                     white 50%,
                     rgba(255, 255, 255, 0) 75%);
+
+            &+div {
+                min-width: 100px;
+            }
         }
 
         * {
